fixed some bugs and added dark mode in admin dashboard

--- a/client/src/components/FloatingButton/FloatingButton.css
+++ b/client/src/components/FloatingButton/FloatingButton.css
@@ -1,7 +1,7 @@
 .floating-button {
   font-size: 24px;
   bottom: 20px;
-  right: 20px;
+  left: 30px;
   width: 60px;
   height: 60px;
   background-color: #263f78; 
